--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -311,12 +311,12 @@
 		}
 
 		&.avatar48 {
-			width: 48px;
-			height: 48px;
+			width: 68px;
+			height: 68px;
 
 			img {
-				width: 48px;
-				height: 48px;
+				width: 68px;
+				height: 68px;
 			}
 		}
 
@@ -759,7 +759,7 @@
 
 			&.one {
 				background-color: #81918E;
-				background-image: url('../images/banner.jpg');
+				background-image: url('../img/screenshots/header2.png');
 			}
 
 			&.two {
@@ -1146,4 +1146,8 @@
 				}
 			}
 
+	}
+
+	.txtshad {
+		text-shadow: 1px 1px black;
 	}
