Update color scheme and add skills list

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -503,18 +503,18 @@
 		color: #fff !important;
 		text-decoration: none;
 		padding: 0.75em 2.5em 0.75em 2.5em;
-		background-color: #8ebebc;
+		background-color: #6b919e;
 		border: 0;
 		cursor: pointer;
 		@include vendor('background-image', ('linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))', 'url("../images/overlay.png")'));
 		@include vendor('transition', 'background-color 0.35s ease-in-out');
 
 		&:hover {
-			background-color: #9ececc;
+			background-color: #7ba1ae;
 		}
 
 		&:active {
-			background-color: #7eaeac;
+			background-color: #5b818e;
 		}
 	}
 
@@ -564,7 +564,7 @@
 		@include vendor('display', 'flex');
 		@include vendor('flex-direction', 'column');
 		@include vendor('justify-content', 'space-between');
-		background: #222629 url('../images/overlay.png');
+		background: #202127 url('../images/overlay.png');
 		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
 		color: #fff;
 		height: 100%;
@@ -690,7 +690,7 @@
 	#footer {
 		margin-left: 375px;
 		text-align: center;
-		background-color: #dce3e2;
+		background-color: #e4e3dd;
 		padding: 3em 0 4em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
@@ -763,15 +763,15 @@
 			}
 
 			&.two {
-				background-color: #f5fafa;
+				background-color: #fef8f1;
 			}
 
 			&.three {
-				background-color: #ecf1f1;
+				background-color: #f0ede5;
 			}
 
 			&.four {
-				background-color: #e8edec;
+				background-color: #ecede8;
 			}
 		}
 	}
